[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
#panic = "abort" # Not needed because of x86_64-blog_os. If enabled, this entry will result in a duplicated lang key error. See issue 7359

[profile.release]
#panic = "abort"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.4" #IO-Port
uart_16550 = "0.2.0" #Reporting test result via serial interface

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-timeout = 300 # (in seconds)
# Tells QEMU that our success exit code is 33 (0x21). This is because the read value (via IO-port) will be modified.
# (EXIT_CODE << 1) | 1 = REAL_EXIT_CODE
# (0x10 << 1) | 1 = 0x21 (33)
test-success-exit-code = 33